package seedu.clauscontrol.data.exception;

//@@author shrabasti-c-reused
/* Reused from Exception class of AB2 application
 * Link: https://github.com/se-edu/addressbook-level2/blob/master/src/seedu/addressbook/data/exception
 * with minor modifications
 */
public class IllegalValueException extends Exception {
    public IllegalValueException(String message) {
        super(message);
    }
}
//@@author
